[workspace]
members = [
    "macros",
    "pypool",
]
resolver = "2"

[workspace.dependencies]
heck = "0.4.1"
md5 = "0.7"
pyo3 = { version = "0.20.3", features = ["extension-module"] }
syn = "2.0.51"
quote = "1.0"
ctor = "0.2.7"
chrono = "0.4"
proc-macro2 = "1.0"
lazy_static = "1.4"
rand = "0.8.5"
macros = { path = "macros" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1


